# logsnap

./: .gitignore  Cargo.toml  README.md
examples/: demo.rs
src/: clock.rs  color.rs  commands.rs  cursor.rs  fs.rs  lib.rs  main.rs  session.rs  state.rs
tests/: .behavior.rs.pending-snap  behavior.rs
ui/: Cargo.toml
ui/src/: main.rs
