[package]
name = "logsnap"
version = "0.1.0"
edition = "2021"
description = "Stateful, cursor-based log snapshotting for iterative debugging (multi-file, rotation-aware)"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"

[profile.release]
strip = true
