[package]
name = "logsnap"
version = "0.1.0"
edition = "2021"
description = "Stateful, cursor-based log snapshotting for iterative debugging (multi-file, rotation-aware)"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
jiff = { version = "0.2.29", default-features = false, features = ["std", "tz-system"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"

[workspace]
members = ["ui"]
resolver = "2"

[profile.release]
strip = true

# gpui is unusably slow when built unoptimized; lift just the heavy graphics
# crates so the GUI's debug build stays interactive while our own code stays fast
# to compile.
[profile.dev.package.gpui]
opt-level = 3
[profile.dev.package.gpui_platform]
opt-level = 3
[profile.dev.package."*"]
opt-level = 2
