[package]
name = "logsnap-ui"
version = "0.1.0"
edition = "2021"
description = "A small read-only desktop viewer over a logsnap session (gpui-component UI)"

[[bin]]
name = "logsnap-ui"
path = "src/main.rs"

[dependencies]
logsnap = { path = ".." }

# gpui (Zed's UI framework) + gpui-component. The zed rev MUST match the one
# gpui-component pins via its workspace (it depends on `gpui = { workspace = true }`),
# otherwise cargo resolves two incompatible gpui versions. gpui-component is pinned
# to the rev of the local checkout we developed against; both come from git (no path
# deps) so the build is reproducible on a fresh clone.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "8e4930fd687da9133bac06fdc0789e6a179f948c" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "8e4930fd687da9133bac06fdc0789e6a179f948c" }
